// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IntegrationCard Snapshot matches snapshot for connected state with config detail 1`] = `
<div
  style="border-radius: var(--theme-border-radius-card, 14px); padding: 20px; display: flex; flex-direction: column; gap: 12px;"
>
  <div
    style="display: flex; align-items: center; gap: 12px;"
  >
    <div
      style="width: 32px; height: 32px; border-radius: 8px; display: flex; align-items: center; justify-content: center; flex-shrink: 0;"
    >
      <span
        data-testid="logo-icon"
      >
        Logo
      </span>
    </div>
    <span
      style="font-size: 16px; font-weight: 600; flex: 1;"
    >
      Stripe
    </span>
    <div
      style="margin-left: auto;"
    >
      <span
        style="display: inline-flex; align-items: center; gap: 5px; height: 22px; padding-left: 8px; padding-right: 8px; border-radius: 99px;"
      >
        <span
          style="width: 6px; height: 6px; border-radius: 99px; box-shadow: 0 0 6px var(--palette-success-main); flex-shrink: 0;"
        />
        <span
          style="font-family: var(--theme-font-family); font-size: 10px; font-weight: 700; letter-spacing: 0.6px; line-height: 1;"
        >
          Connected
        </span>
      </span>
    </div>
  </div>
  <p
    style="font-size: 13px; font-weight: 400; line-height: 1.5; margin: 0px;"
  >
    Payment processing
  </p>
  <div
    style="font-size: 12px; display: flex; align-items: center; gap: 6px;"
  >
    <svg
      aria-hidden="true"
      fill="none"
      height="14"
      viewBox="0 0 14 14"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9.5 2.5L11.5 4.5L4.5 11.5H2.5V9.5L9.5 2.5Z"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.2"
      />
    </svg>
    <span>
      pk_live_••••1234
    </span>
  </div>
  <button
    style="width: 100%; height: 36px; border-radius: 8px; font-size: 13px; font-weight: 600; background: transparent; cursor: pointer;"
  >
    Disconnect
  </button>
</div>
`;

exports[`IntegrationCard Snapshot matches snapshot for disconnected state 1`] = `
<div
  style="border-radius: var(--theme-border-radius-card, 14px); padding: 20px; display: flex; flex-direction: column; gap: 12px;"
>
  <div
    style="display: flex; align-items: center; gap: 12px;"
  >
    <div
      style="width: 32px; height: 32px; border-radius: 8px; display: flex; align-items: center; justify-content: center; flex-shrink: 0;"
    >
      <span
        data-testid="logo-icon"
      >
        Logo
      </span>
    </div>
    <span
      style="font-size: 16px; font-weight: 600; flex: 1;"
    >
      Stripe
    </span>
    <div
      style="margin-left: auto;"
    >
      <span
        style="display: inline-flex; align-items: center; gap: 5px; height: 22px; padding-left: 8px; padding-right: 8px; border-radius: 99px; background: rgba(0, 0, 0, 0.55); border: 0.5px solid rgba(255,255,255,0.08);"
      >
        <span
          style="width: 6px; height: 6px; border-radius: 99px; box-shadow: 0 0 6px var(--theme-text-secondary); flex-shrink: 0;"
        />
        <span
          style="font-family: var(--theme-font-family); font-size: 10px; font-weight: 700; letter-spacing: 0.6px; line-height: 1;"
        >
          Not connected
        </span>
      </span>
    </div>
  </div>
  <p
    style="font-size: 13px; font-weight: 400; line-height: 1.5; margin: 0px;"
  >
    Payment processing
  </p>
  <button
    style="width: 100%; height: 36px; border-radius: 8px; font-size: 13px; font-weight: 600; color: white; cursor: pointer;"
  >
    Connect
  </button>
</div>
`;
